aggiunta fonte sotto al titolo

--- a/index.html
+++ b/index.html
@@ -13,12 +13,21 @@
             <img src="./img/logo.svg" height="40px">
         </div>
 
-        <!-- titolo e fonte -->
+        <!-- titolo -->
          <section id="title">
             <h1><strong>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Bernes-Lee</strong></h1>
          </section>
 
+         <!-- fonte -->
+          <section>
+          <h2 class="fonte">Scritto da The Booleaner</h2>
+          <h3 class="fonte">il 10/10/2020</h3>
+        </section>
     </header>
+    <main>
+        <!-- foto di tim -->
+         <figure></figure>
+    </main>
     
 </body>
 </html>
