--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
     </header>
     <main>
         <!-- foto di tim -->
-         <figure></figure>
+         <figure>
+            <img src="./img/tim-1.jpg" alt="1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen">
+            <img src="./img/tim-2.jpg" alt="2nd Photo: Wikimedia, by Paul Clark">
+            <figcaption>1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen</figcaption>
+            <figcaption>2nd Photo: Wikimedia, by Paul Clark</figcaption>
+         </figure>
     </main>
     
 </body>
