--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
          <!-- fonte -->
           <section>
-          <h2 class="fonte">Scritto da The Booleaner</h2>
+          <h2 class="fonte">Scritto da <span id="thebooleaner">The Booleaner</span></h2>
           <h3 class="fonte">il 10/10/2020</h3>
         </section>
     </header>
@@ -32,6 +32,9 @@
             <figcaption>1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen</figcaption>
             <figcaption>2nd Photo: Wikimedia, by Paul Clark</figcaption>
          </figure>
+
+         <!-- testo principale -->
+
     </main>
     
 </body>
