aggiunta lista ul

--- a/index.html
+++ b/index.html
@@ -34,7 +34,17 @@
          </figure>
 
          <!-- testo principale -->
+          <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, eum. Fugit, mollitia? Laudantium amet, natus ab ipsa, <mark> culpa suscipit quaerat deleniti ratione voluptas incidunt cum</mark>, molestiae soluta commodi nihil blanditiis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic amet provident quos vitae totam minima doloribus illo voluptas fugit, sit reprehenderit consequatur corrupti deleniti eligendi dicta natus et, aliquid dolorum?</h2>
 
+        <!-- lista non numerata -->
+        <ul>
+            <li><strong>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate inventore fuga dolorem, necessitatibus, ipsam quos sapiente tenetur veniam vel odio recusandae officia ab ipsum? Quaerat minima fugiat quos delectus nisi.</strong></li>
+            <li><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis suscipit ea temporibus, ipsum illum dolores porro, consequatur excepturi consequuntur aliquam praesentium officia voluptas fuga sunt rem id voluptates provident maiores.</strong></li>
+            <li><strong>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo doloremque nisi quos? Pariatur nesciunt voluptate molestiae porro quos est modi, dolore rerum debitis, quaerat aut obcaecati numquam, minima hic. Nulla.</strong></li>
+        </ul>
+
+        <!-- tabella -->
+         <table></table>
     </main>
     
 </body>
