aggiunta table e testo secondario

--- a/index.html
+++ b/index.html
@@ -44,7 +44,34 @@
         </ul>
 
         <!-- tabella -->
-         <table></table>
+         <table>
+            <thead>
+                <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="tablebody">
+                    <th><strong>Lorem ipsum dolor</strong></th>
+                    <th><strong>Lorem ipsum dolor</strong></th>
+                    <th><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dignissimos, ratione vitae molestiae libero rerum debitis eaque! Alias eligendi, ipsum facere asperiores dicta doloribus mollitia repudiandae minima autem nam aliquam?</strong></th>
+                </tr>
+                <tr>
+                    <th><strong>Lorem ipsum dolor</strong></th>
+                    <th><strong>Lorem ipsum dolor</strong></th>
+                    <th><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dignissimos, ratione vitae molestiae libero rerum debitis eaque! Alias eligendi, ipsum facere asperiores dicta doloribus mollitia repudiandae minima autem nam aliquam?</strong></th>
+                </tr>
+                <tr class="tablebody">
+                    <th><strong>Lorem ipsum dolor</strong></th>
+                    <th><strong>Lorem ipsum dolor</strong></th>
+                    <th><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dignissimos, ratione vitae molestiae libero rerum debitis eaque! Alias eligendi, ipsum facere asperiores dicta doloribus mollitia repudiandae minima autem nam aliquam?</strong></th>
+                </tr>
+            </tbody>
+         </table>
+         <!-- testo principale -->
+         <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, eum. Fugit, mollitia? Laudantium amet, natus ab ipsa,culpa suscipit quaerat deleniti ratione voluptas incidunt cum, molestiae soluta commodi nihil blanditiis. <mark> ipsum dolor, sit amet consectetur adipisicing elit.</mark> Hic amet provident quos vitae totam minima doloribus illo voluptas fugit, sit reprehenderit consequatur corrupti deleniti eligendi dicta natus et, aliquid dolorum?</h2>
     </main>
     
 </body>
