inserimento foto con scritta

--- a/index.html
+++ b/index.html
@@ -70,9 +70,17 @@
                 </tr>
             </tbody>
          </table>
-         <!-- testo principale -->
+
+         <!-- testo secondario -->
          <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, eum. Fugit, mollitia? Laudantium amet, natus ab ipsa,culpa suscipit quaerat deleniti ratione voluptas incidunt cum, molestiae soluta commodi nihil blanditiis. <mark> ipsum dolor, sit amet consectetur adipisicing elit.</mark> Hic amet provident quos vitae totam minima doloribus illo voluptas fugit, sit reprehenderit consequatur corrupti deleniti eligendi dicta natus et, aliquid dolorum?</h2>
     </main>
+    <footer>
+        <h2 style="opacity: 50%;">Potrebbero interessarti</h2>
+
+         <!-- foto con testo -->
+          <h4 id="monitor">Lorem ipsum dolor</h4>
+          <h4 id="schermata">Lorem ipsum dolor</h4>
+    </footer>
     
 </body>
 </html>
